# nyu-appsec-unit1

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  main.c  sometext.txt  spell.c  test_main.c  test_worlist.txt
afl_tests/output_fuzz_dictionary/: fuzzer_stats
afl_tests/output_fuzz_words_to_check/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
afl_tests/output_fuzz_words_to_check/hangs/: id:000000,src:000000,op:flip1,pos:42
afl_tests/tests_files/: test3.txt  test_overflow_worlist.txt
code_coverage/: index-sort-f.html  index-sort-l.html  index.html
code_coverage/nyu-appsec-unit1/: index-sort-f.html  index-sort-l.html  index.html  spell.c.func-sort-c.html  spell.c.func.html  spell.c.gcov.html  test_main.c.func-sort-c.html  test_main.c.func.html  test_main.c.gcov.html
docs/: index-sort-f.html  index-sort-l.html  index.html
docs/nyu-appsec-unit1/: index-sort-f.html  index-sort-l.html  index.html  spell.c.func-sort-c.html  spell.c.func.html  spell.c.gcov.html  test_main.c.func-sort-c.html  test_main.c.func.html  test_main.c.gcov.html
texts/: onegin_j.txt  onegin_r.txt  sometext.txt  test2.txt
